button spacing fix

--- a/assets/scss/03-organisms/_key-message.scss
+++ b/assets/scss/03-organisms/_key-message.scss
@@ -42,7 +42,7 @@ $colors: (
     }
   }
 
-  .ma__key-message__wrapper .ma__key-message__title + .ma__key-message__cta {
+  .ma__key-message__wrapper header + .ma__key-message__cta {
     margin-top: 40px;
   }
 
